--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+# Editor
 .idea/
+
+# Python
 __pycache__/
+env/
+
+# Django
 db.sqlite3
-db.sqlite3.*
+db.sqlite3*
 /static/
 migrations/
-env/
+
+# Logging
+mbmt.log*
