--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Python
 __pycache__/
 env/
+*.pyc
 
 # Django
 db.sqlite3
@@ -16,3 +17,6 @@ mbmt.log*
 
 # Deploy data
 deployed/
+
+# Various data
+*.json
