--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-django==2.0.*
-django-crispy-forms==1.7.*
-django-picklefield==1.1.0
-PyYAML==3.*
+django==1.11
+django-crispy-forms==1.6.0
+django-picklefield==0.3.2
+PyYAML==3.12
 scipy
 Pillow
